# Parcial-final

./: .gitignore  CMakeLists.txt  REAdME
include/: REAdME  game.h  juego.h  mundos.h  objeto.h  personaje.h
src/: REAdME  game.cpp  juego.cpp  main.cpp  mundos.cpp  objeto.cpp  personaje.cpp
